--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true 
+
+#Whitelabel error handler
+server.error.whitelabel.enabled=false
+server.error.path=/error
