--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.h2.console.enabled=true
 #Whitelabel error handler
 server.error.whitelabel.enabled=false
 server.error.path=/error
+server.port=5000
